--- a/src/web/register.xhtml
+++ b/src/web/register.xhtml
@@ -10,6 +10,7 @@
         <h1>Register page</h1>
         <hr/>
         <h:form>
+            <h:commandButton action="/index" value="geri"/> 
             <h:commandButton action="/panel/uyeler" value="Public"/>
             <h:commandButton action="/private?faces-redirect=true" value="Private"/>
         </h:form>
